--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-fastapi
-uvicorn
-python-multipart
-opencv-python
-python-dotenv
-openai
+fastapi>=0.68.0
+uvicorn>=0.15.0
+openai>=0.27.0
+python-dotenv>=0.19.0
+opencv-python-headless>=4.5.0
+python-multipart>=0.0.5
+numpy>=1.21.0
+aiofiles>=22.1.0
